---
source: crates/compiler/can/tests/test_suffixed.rs
expression: snapshot
---
Defs {
    tags: [
        EitherIndex(2147483648),
        EitherIndex(2147483649),
    ],
    regions: [
        @0-33,
        @35-45,
    ],
    space_before: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 2 },
    ],
    space_after: [
        Slice<roc_parse::ast::CommentOrNewline> { start: 0, length: 0 },
        Slice<roc_parse::ast::CommentOrNewline> { start: 2, length: 1 },
    ],
    spaces: [
        Newline,
        Newline,
        Newline,
    ],
    type_defs: [],
    value_defs: [
        AnnotatedBody {
            ann_pattern: @0-3 Identifier {
                ident: "run",
            },
            ann_type: @6-15 Apply(
                "",
                "Task",
                [
                    @11-13 Record {
                        fields: [],
                        ext: None,
                    },
                    @14-15 Inferred,
                ],
            ),
            lines_between: [
                Newline,
            ],
            body_pattern: @16-19 Identifier {
                ident: "run",
            },
            body_expr: @22-33 Apply(
                @22-33 Var {
                    module_name: "",
                    ident: "line",
                },
                [
                    @28-33 Str(
                        PlainLine(
                            "foo",
                        ),
                    ),
                ],
                Space,
            ),
        },
        Body(
            @35-39 Identifier {
                ident: "main",
            },
            @42-45 Var {
                module_name: "",
                ident: "run",
            },
        ),
    ],
}
